syntax = "proto3";
package authservice;

import "const.proto";

option go_package = "./pb/authpb";

service AuthService {
  rpc GetCredential(GetCredentialRequest) returns (GetCredentialResponse) {}
  rpc CheckAuth(CheckAuthRequest) returns (CheckAuthResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc ChangeMail(ChangeMailRequest) returns (ChangeMailResponse) {}
  rpc BanUser(BanUserRequest) returns (BanUserResponse) {}
  
  rpc VerifyOTP(VerifyOTPRequest) returns (VerifyOTPResponse) {}
  rpc ResendOTP(ResendOTPRequest) returns (ResendOTPResponse) {}
  
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc RegisterOTP(RegisterOTPRequest) returns (RegisterOTPResponse) {}

  rpc ChangeMailAndPass(ChangeMailAndPassRequest) returns(ChangeMailAndPassResponse) {}
  rpc ChangeMailAndPassOTP(ChangeMailAndPassOTPRequest) returns(ChangeMailAndPassOTPResponse) {}

  rpc RegisterNoOTP(RegisterNoOTPRequest) returns(RegisterNoOTPResponse) {}
  
  rpc ChangeMailOTP(ChangeMailOTPRequest) returns (ChangeMailOTPResponse) {}
  rpc ForgotPasswordOTP(ForgotPasswordOTPRequest) returns (ForgotPasswordOTPResponse) {}
  rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
  rpc CheckCredential(CheckCredentialRequest) returns (CheckCredentialResponse) {}

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}


  // rpc ChangeMail(ChangeMailRequest) returns (ChangeMailResponse) {}
  // rpc ChangeMailOTP(ChangeMailOTPRequest) returns (ChangeMailOTPResponse) {}

}


// -------------------------------------------------------------------------------------------------------------------------------------
message Credential {
  string publicKey = 1;
  string encryptedPrivateKey = 2;
  string id = 3;
  const.ROLE role = 4;
  bool isDefaultPassword = 5;
}

message DeleteUserRequest {
  string id = 1;
}
message DeleteUserResponse {
  string id = 1;
  const.ROLE role = 2;
}

message ChangeMailRequest {
  string id = 1;
  string mail = 2;
}
message ChangeMailResponse {
  string otpId = 1;
}


message ChangeMailOTPRequest {
  string otpId = 1;
}
message ChangeMailOTPResponse {
  string id = 1;
  string mail = 2;
  const.ROLE role = 3;
}

message ChangeMailAndPassOTPRequest {
  string otpId = 1;
}
message ChangeMailAndPassOTPResponse {
  string id = 1;
  string mail = 2;
  const.ROLE role = 3;
}

message ChangeMailAndPassRequest {
  string mail = 1;
  string encryptedPrivateKey = 2;
  string userId = 3;
  string publicKey = 4;
}

message ChangeMailAndPassResponse {
}


message ForgotPasswordOTPRequest {
  string otpId = 1;
  string encryptedPrivateKey = 2;
  string publicKey = 3;
}
message ForgotPasswordOTPResponse {
}



message CheckCredentialRequest {
  string identifier = 1;
}
message CheckCredentialResponse {
  bool existed = 1;
}


message BanUserRequest {
  string id = 1;
  bool status = 2;
}

message BanUserResponse {
  string id = 1;
  bool status = 2;
  const.ROLE role = 3;
}

message ForgotPasswordRequest {
  string mail = 1;
}
message ForgotPasswordResponse {
  string id = 1;
  string otpId = 2;
}

message ResendOTPRequest {
  string id = 1;
}
message ResendOTPResponse {
}


message RegisterOTPRequest {
  string otpId = 1;
}


message RegisterOTPResponse {
  string id = 1;
  string mail = 2;
  string phone = 3;
  const.ROLE role = 4;
  string refCode = 5;
}


message VerifyOTPRequest {
  string otpId = 1;
  string otp = 2;
}
message VerifyOTPResponse {
  bool ok = 1;
  const.OTP_TYPE type = 2;
  string otpId = 3;
}


message ChangePasswordRequest {
  string id = 1;
  string publicKey = 2;
  string encryptedPrivateKey = 3;
}
message ChangePasswordResponse {
}


message GetCredentialRequest {
  string identifier = 1;
}


message GetCredentialResponse {
  Credential credential = 1;
}

message CheckAuthRequest {
  bytes header = 1;
  bytes body = 2;
  string method = 3;
}

message CheckAuthResponse {
  string id = 1;
  const.ROLE role = 2;
}

message RegisterNoOTPRequest {
  string username = 1;
  string publicKey = 2;
  string encryptedPrivateKey = 3;
  string mail = 4;
  string phone = 5;
}

message RegisterNoOTPResponse {
  string publicKey = 1;
  string encryptedPrivateKey = 2;
  string id = 3;
}

message RegisterRequest {
  string username = 1;
  string publicKey = 2;
  string encryptedPrivateKey = 3;
  string mail = 4;
  string phone = 5;
  const.ROLE role = 6;
  string refCode = 7;
}


message RegisterResponse {
  string publicKey = 1;
  string encryptedPrivateKey = 2;
  string otpId = 3;
}